ASUSFETest/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ASURite_ID__c</fullName>
        <description>Student alias; also used for student email account</description>
        <label>ASURITE ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASU_Email__c</fullName>
        <description>Official ASU directory email address (usually first and last name)</description>
        <inlineHelpText>Official ASU directory email address (usually first and last name)</inlineHelpText>
        <label>Directory Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASU_Gmail__c</fullName>
        <description>Email account formatted asurite@asu.edu</description>
        <label>ASU Gmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Affiliation_Alumni__c</fullName>
        <description>Relations with Institution</description>
        <label>Alumni</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affiliation_Consumer__c</fullName>
        <description>Relation with Institution</description>
        <label>Consumer</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affiliation_Courtesy_Affiliate__c</fullName>
        <description>Relation with Institution</description>
        <label>Courtesy Affiliate</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affiliation_Employee__c</fullName>
        <description>Relation with Institution</description>
        <label>Employee</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affiliation_Student_Applicant__c</fullName>
        <description>Relations with Institution</description>
        <label>Student Applicant</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affiliation_Student__c</fullName>
        <description>Relations with Institution</description>
        <label>Student</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Arizona_Resident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Arizona Resident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Athletic_Participation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Student has been a member of an athletic team.</description>
        <label>Athletic Participation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAP_Ineligible_Student_Group_Count__c</fullName>
        <description>A count of the total Student Group records where Status is True and PeopleSoft Code is CP03. Used to determine if this Contact should be flagged as a currently ineligible College Achievement Plan participant.</description>
        <inlineHelpText>A count of the total Student Group records where Status is True and PeopleSoft Code is CP03. Used to determine if this Contact should be flagged as a currently ineligible College Achievement Plan participant.</inlineHelpText>
        <label>CAP Ineligible Student Group Count</label>
        <summaryFilterItems>
            <field>Student_Group__c.SG_Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Student_Group__c.SG_PeopleSoft_Code__c</field>
            <operation>equals</operation>
            <value>CP03</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Group__c.SG_Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CAP_Possible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates possible CAP student</description>
        <inlineHelpText>Indicates possible CAP student</inlineHelpText>
        <label>CAP Possible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAP_Student_Group_Count__c</fullName>
        <description>A count of the total Student Group records where Status is True and PeopleSoft Code is CP00, CP01, or CP02. Used to determine if this Contact should be flagged as a College Achievement Plan participant.</description>
        <inlineHelpText>A count of the total Student Group records where Status is True and PeopleSoft Code is CP00, CP01, or CP02. Used to determine if this Contact should be flagged as a College Achievement Plan participant.</inlineHelpText>
        <label>CAP Student Group Count</label>
        <summaryFilterItems>
            <field>Student_Group__c.SG_Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Student_Group__c.SG_PeopleSoft_Code__c</field>
            <operation>equals</operation>
            <value>CP00, CP01, CP02</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Group__c.SG_Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CAP__c</fullName>
        <formula>IF(CAP_Student_Group_Count__c &gt; 0, 
IMAGE(&quot;/servlet/servlet.ImageServer?id=015d0000003Poog&amp;oid=&quot;&amp;$Organization.Id,&quot;CAP Participant&quot;,20,20), 
IF(CAP_Ineligible_Student_Group_Count__c &gt; 0, 
IMAGE(&quot;/servlet/servlet.ImageServer?id=015d0000003QCEg&amp;oid=&quot;&amp;$Organization.Id,&quot;CAP Ineligible&quot;,20,20), 
IF(CAP_Possible__c, 
IMAGE(&quot;/servlet/servlet.ImageServer?id=015d0000003Q7J2&amp;oid=&quot;&amp;$Organization.Id,&quot;CAP Possible&quot;,20,20), 
&quot;&quot;)))</formula>
        <inlineHelpText>Displays a green icon for a College Achievement Plan participant. Automatically set when the Contact has one or more Student Group records where Status is True and PeopleSoft Code is CP00, CP01, or CP02.</inlineHelpText>
        <label>CAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_of_Citizenship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country of Citizenship</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts (Country of Citizenship)</relationshipLabel>
        <relationshipName>Contacts_Country_of_Citizenship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when student is deceased.</description>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Duplicate value in PeopleSoft. XXX&apos;+LAST_NAME,FIRST_NAME+EMPLID = TRUE</description>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>PeopleSoft unique ID</description>
        <externalId>true</externalId>
        <label>EMPLID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EPO_Email__c</fullName>
        <description>Email address of the destination email after ASUrite has been activated.</description>
        <inlineHelpText>This email address is the forwarding email address the person has chosen to receive ASU email communication.</inlineHelpText>
        <label>Destination Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Change_Date__c</fullName>
        <inlineHelpText>The date and time the Contact&apos;s primary Email was changed. For the reason, see &quot;Email Change Reason&quot;.</inlineHelpText>
        <label>Email Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Change_Reason__c</fullName>
        <description>The reason for a change to the Contact&apos;s primary Email address</description>
        <inlineHelpText>The reason for a change to the Contact&apos;s primary Email address</inlineHelpText>
        <label>Email Change Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <description>Field to capture email status response from BriteVerify. Temp = temporary email address. Role = role-based email address.</description>
        <label>Email Status</label>
        <picklist>
            <picklistValues>
                <fullName>Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Am. Indian Alaska Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black African-American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FERPA_Directory_Hold__c</fullName>
        <description>PS Value	Salesforce Value
0	No Hold
1	Phone-Address Hold
2	Full Hold</description>
        <label>FERPA Directory Hold</label>
        <picklist>
            <picklistValues>
                <fullName>No Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone-Address Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FERPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FERPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geomarket_Code__c</fullName>
        <label>Geomarket Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduate_GPA_Scale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Graduate GPA Scale</label>
        <referenceTo>GPA_Scale__c</referenceTo>
        <relationshipLabel>Contacts (Graduate GPA Scale)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Graduate_GPA__c</fullName>
        <label>Graduate GPA</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jr_Sr_GPA_Scale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jr-Sr GPA Scale</label>
        <referenceTo>GPA_Scale__c</referenceTo>
        <relationshipLabel>Contacts (Jr-Sr GPA Scale)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jr_Sr_GPA__c</fullName>
        <label>Jr-Sr GPA</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Case_Email_Used__c</fullName>
        <inlineHelpText>The email this Contact last used when sending a message to an ASU address that is processed by Salesforce.</inlineHelpText>
        <label>Last Case Email Used</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_College_Attended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last College Attended</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Last College Attended)</relationshipLabel>
        <relationshipName>Contacts_HS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_HS_Attended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last High School Attended</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Last High School Attended)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Email__c</fullName>
        <description>Transferred field from the Lead record</description>
        <label>Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Secondary_Email__c</fullName>
        <description>Additional email address from the Lead record</description>
        <label>Lead Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Subtype__c</fullName>
        <description>Original lead source subtype</description>
        <label>Lead Source Subtype</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Coll Technology &amp; Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College of Public Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cronkite School-Journ/MassComm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herberger Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ira A Fulton Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberal Arts &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MaryLouFulton Teachers College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Interdis Arts &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing &amp; Health Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Letters &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W.P. Carey School of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&apos;Connor College of Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASU Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA Today</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS Applying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS GRE Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS Personal Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Session - Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Session - Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE Subject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOEFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idealist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Middle Name</description>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Branch__c</fullName>
        <label>Military Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Air Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Military_Status__c</fullName>
        <label>Military Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse/Dependent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Reserve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Military_Veteran_Status__c</fullName>
        <description>SR1B	Veteran Verified
SR1C	Dependent of Veteran Verified
SR1D	Self-Identified Veteran or Dependent</description>
        <label>Military/Veteran Status</label>
        <picklist>
            <picklistValues>
                <fullName>Veteran Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependent of Veteran Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Identified Veteran or Dependent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <description>Personal email address</description>
        <inlineHelpText>Personal non-ASU email address listed as Other in PeopleSoft</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Possible_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possible Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <description>Student&apos;s Preferred email address in PeopleSoft</description>
        <inlineHelpText>Student&apos;s Preferred email address in PeopleSoft</inlineHelpText>
        <label>Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_Number__c</fullName>
        <description>Unique ID number from PeopleSoft</description>
        <label>Student Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Name Suffix</description>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag test records in production</description>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>US_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Documented US Citizen</description>
        <label>US Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Undergraduate_GPA_Scale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Undergraduate GPA Scale</label>
        <referenceTo>GPA_Scale__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Undergraduate_GPA__c</fullName>
        <label>Undergraduate GPA</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Major__c</fullName>
        <label>Undergraduate Major</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Type__c</fullName>
        <label>Visa Type</label>
        <picklist>
            <picklistValues>
                <fullName>A1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I94</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>silverpop__CRMI_Modified_Date__c</fullName>
        <label>CRMI Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Sync_Id__c</fullName>
        <label>Last Sync Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead_Rank__c</fullName>
        <label>Lead Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Behavior_Score__c</fullName>
        <label>Silverpop Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Lead_Rank__c</fullName>
        <label>Silverpop Lead Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Lead_Score__c</fullName>
        <label>Silverpop Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_RecipientID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Silverpop RecipientID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>silverpop__Sync_to_Silverpop_Chk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use &quot;Sync to Silverpop&quot; to determine which contacts you want to sync with Silverpop. When the box is checked, the field value CANNOT be changed, the selected contacts will be synced to Silverpop and will always sync.</inlineHelpText>
        <label>Sync to Silverpop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>silverpop__Sync_to_Silverpop__c</fullName>
        <label>No Longer Used</label>
        <picklist>
            <picklistValues>
                <fullName>Not Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts_Military</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Personal_Email__c</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>CONTACT.PHONE5</columns>
        <columns>Military_Status__c</columns>
        <columns>Military_Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Military_Status__c</field>
            <operation>equals</operation>
            <value>Active Duty,Dependant,National Guard,Reserves,Veteran</value>
        </filters>
        <label>All Contacts-Military</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_Test_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Personal_Email__c</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>CONTACT.PHONE5</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>CONTACT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Test Contacts</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>CreatedThisWeek</fullName>
        <columns>CAP__c</columns>
        <columns>CAP_Possible__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>Lead_Source_Subtype__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Created This Week</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CreatedThisWeekEMPLID</fullName>
        <columns>CAP__c</columns>
        <columns>FULL_NAME</columns>
        <columns>EMPLID__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Affiliation_Student_Applicant__c</columns>
        <columns>Affiliation_Student__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>EMPLID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>This Week with EMPLID</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
        </sharedTo>
    </listViews>
</CustomObject>